--- a/site/index.html
+++ b/site/index.html
@@ -46,6 +46,17 @@
 				document.getElementById( 'currentlyPlaying' ).innerHTML = data.date;
 			}
 			socket.on( 'date', handleNewTrack );
+			function play(){
+				console.log("play");
+				socket.emit("play");
+			}
+			function next(){
+				console.log("next");
+				socket.emit("next");
+			}
+			function stations(){
+				console.log("stations");
+			}
 		</script>
 		<script src="iosScroll.js"></script>
 	</HEAD>
@@ -63,10 +74,10 @@
 				</tr>
 				<tr height="1" valign="center">
 					<td width=15></td>
-					<td><a onclick="window.location='pianobar.php'"><img src="curve19.png" style="vertical-align:middle" border="none" width="100%"></a></td>
-					<td><a onclick="window.location='pianobar.php?action=pause'"><img src="round31.png" style="vertical-align:middle" border="none" width="100%"></a></td>
-					<td><a onclick="window.location='pianobar.php?action=next'"><img src="fast10.png" style="vertical-align:middle" border="none" width="100%"></a></td>
-					<td><a onclick="window.location='pianobar.php?action=stations'"><img src="cogwheel8.png" style="vertical-align:middle" border="none" width="100%"></a></td>
+					<td><a onclick="window.location=''"><img src="curve19.png" style="vertical-align:middle" border="none" width="100%"></a></td>
+					<td><a onclick="play();"><img src="round31.png" style="vertical-align:middle" border="none" width="100%"></a></td>
+					<td><a onclick="next();"><img src="fast10.png" style="vertical-align:middle" border="none" width="100%"></a></td>
+					<td><a onclick="stations();"><img src="cogwheel8.png" style="vertical-align:middle" border="none" width="100%"></a></td>
 					<td width=15></TD>
 				</tr>
 			</TABLE>
